:memo: Search toggle button fix on mobile

--- a/src/global-header/_global-header.scss
+++ b/src/global-header/_global-header.scss
@@ -314,6 +314,7 @@ $alpha: .5;
         cursor: pointer;
         margin: 20px 0;
         min-height: 40px;
+        overflow: hidden;
         padding: 5px 19px;
         position: absolute;
         right: 16px;
